--- a/client/public/patient-dashboard.html
+++ b/client/public/patient-dashboard.html
@@ -165,6 +165,10 @@
         document.getElementById('logout-btn').addEventListener('click', function(e) {
             e.preventDefault();
             
+            // Clear local storage tokens
+            localStorage.removeItem('access_token');
+            localStorage.removeItem('refresh_token');
+            
             // Call logout API
             fetch('/api/logout', {
                 method: 'POST',
@@ -174,13 +178,13 @@
                 if (!response.ok) {
                     throw new Error('Logout failed');
                 }
-                // Redirect to login page after successful logout
-                window.location.href = '/auth.html';
+                // Redirect to login page after successful logout with a parameter
+                window.location.href = '/auth.html?logout=true';
             })
             .catch(error => {
                 console.error('Logout error:', error);
-                // Try to redirect anyway
-                window.location.href = '/auth.html';
+                // Try to redirect anyway with the logout parameter
+                window.location.href = '/auth.html?logout=true';
             });
         });
     </script>
