--- a/frontend/client/public/auth.html
+++ b/frontend/client/public/auth.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - MediConnect</title>
+    <title>Login - CareBridge</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -88,8 +88,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>MediConnect</h1>
-            <p>Streamlining doctor-patient appointments</p>
+            <h1>CareBridge</h1>
+            <p>Healthcare Patient Management</p>
         </div>
         
         <div class="form-card">
