--- a/frontend/client/index.html
+++ b/frontend/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>MediConnect - Medical Appointment System</title>
+    <title>CareBridge - Medical Appointment System</title>
     <script>
       // Immediately check authentication and redirect to appropriate page
       fetch('/api/user')
@@ -30,7 +30,7 @@
   <body>
     <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
       <div style="text-align: center;">
-        <h1>Loading MediConnect...</h1>
+        <h1>Loading CareBridge...</h1>
         <p>Please wait while we redirect you to the appropriate dashboard.</p>
       </div>
     </div>
