--- a/frontend/client/public/doctor-dashboard.html
+++ b/frontend/client/public/doctor-dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doctor Dashboard - MediConnect</title>
+    <title>Doctor Dashboard - CareBridge</title>
     <!-- Add reference to the API configuration file -->
     <script src="/js/api-config.js"></script>
     <style>
@@ -126,7 +126,7 @@
 </head>
 <body>
     <header>
-        <h1>MediConnect</h1>
+        <h1>CareBridge</h1>
         <nav class="navbar" style="display: flex; align-items: center; gap: 1rem;">
             <a href="/doctor-dashboard.html" style="color: white;">Dashboard</a>
             <a href="/doctor-appointments.html" style="color: white;">Appointments</a>
