--- a/frontend/client/public/patient-appointments.html
+++ b/frontend/client/public/patient-appointments.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Appointments - MediConnect</title>
+    <title>My Appointments - CareBridge</title>
     <!-- Add reference to the API configuration file -->
     <script src="/js/api-config.js"></script>
     <style>
@@ -232,7 +232,7 @@
 </head>
 <body>
     <header>
-        <h1>MediConnect</h1>
+        <h1>CareBridge</h1>
         <nav class="navbar" style="display: flex; align-items: center; gap: 1rem;">
             <a href="/patient-dashboard.html" style="color: white;">Dashboard</a>
             <a href="/patient-appointments.html" style="color: white;">My Appointments</a>
