--- a/frontend/client/public/register.html
+++ b/frontend/client/public/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register - MediConnect</title>
+    <title>Register - CareBridge</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -120,7 +120,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>MediConnect</h1>
+            <h1>CareBridge</h1>
             <p>Create a new account</p>
         </div>
         
