--- a/frontend/client/public/patient-find-doctors.html
+++ b/frontend/client/public/patient-find-doctors.html
@@ -121,6 +121,8 @@
             border-radius: 8px;
             max-width: 500px;
             position: relative;
+            max-height: 80vh;
+            overflow-y: auto;
         }
         .close-modal {
             position: absolute;
