--- a/frontend/client/public/doctor-availability.html
+++ b/frontend/client/public/doctor-availability.html
@@ -39,6 +39,8 @@
             padding: 1.5rem;
             box-shadow: 0 1px 3px rgba(0,0,0,0.1);
             margin-bottom: 1.5rem;
+            max-height: 80vh;
+            overflow-y: auto;
         }
         .btn {
             background-color: #3b82f6;
@@ -197,6 +199,16 @@
         .dropdown-link.logout {
             border-top: 1px solid #e5e7eb;
             color: #ef4444;
+        }
+        .modal-content {
+            background-color: white;
+            margin: 10% auto;
+            padding: 2rem;
+            border-radius: 8px;
+            max-width: 500px;
+            position: relative;
+            max-height: 80vh;
+            overflow-y: auto;
         }
     </style>
 </head>
