--- a/frontend/client/public/patient-dashboard.html
+++ b/frontend/client/public/patient-dashboard.html
@@ -79,6 +79,7 @@
         .profile-dropdown {
             position: relative;
             display: inline-block;
+            z-index: 10;
         }
         .profile-icon {
             width: 40px;
